@@ -5,6 +5,12 @@
 <p>
 This directory contains a number of Python scripts that can get you started in learning to use pyparsing.
 
+<h2>LICENSE</h2>
+<b><i>
+The files and source code in this examples directory are covered under the same LICENSE as
+the core pyparsing package. You will find this license in the LICENSE file of the pyparsing package.
+</i></b>
+
 <ul>
 <li><a href="greeting.py">greeting.py</a><br>
 Parse "Hello, World!".
@@ -35,6 +41,17 @@ Parses a chemical formula (such as "H2O" or "C6H5OH"), and walks the returned li
 <li><a href="wordsToNum.py">wordsToNum.py</a><br>
 A sample program that reads a number in words (such as "fifteen hundred and sixty four"), and returns the actual number (1564).
 Also demonstrates some processing of ParseExceptions, including marking where the parse failure was found.
+</li>
+<p>
+
+<li><a href="mongodb_query_expression.py">mongodb_query_expression.py</a><br>
+A useful utility to convert infix query expressions into the nested dicts required by the MongoDB pymongo library's
+`find()` command.
+</li>
+<p>
+
+<li><a href="delta_time.py">delta_time.py</a><br>
+A utility to parse colloquial time expressions such as "2pm next Tuesday" and convert them into Python datetime instances.
 </li>
 <p>
 
