@@ -121,7 +121,7 @@ class version_info(NamedTuple):
 
 
 __version_info__ = version_info(3, 1, 3, "final", 1)
-__version_time__ = "24 Aug 2024 17:01 UTC"
+__version_time__ = "24 Aug 2024 23:47 UTC"
 __version__ = __version_info__.__version__
 __versionTime__ = __version_time__
 __author__ = "Paul McGuire <ptmcg.gm+pyparsing@gmail.com>"
